# curry-pbrt

./: .gitignore  Cargo.toml  perf.data  perf.data.old  profile_after_parallel  profile_before_parallel  readme.md
examples/: concentric_sample_disk.rs  halton_sampler.rs  parse.rs  parse_lex.rs  raymond_post_effect.rs  render_from_file.rs  sphere.rs
scenes/: cornel_box.pbrt  cornel_box_infinite_area_light.pbrt  cornel_box_texture.pbrt  sphere.pbrt
script/: deploy.sh  watch_render.sh
src/: def.rs  film.rs  lib.rs  main.rs  math.rs  primitive.rs  render.rs  scene.rs
src/aggregate/: bvh.rs  mod.rs  plain.rs
src/camera/: lens.rs  mod.rs  perspective.rs
src/geometry/: bounds.rs  mod.rs  normal.rs  point.rs  ray.rs  transform.rs  vector.rs
src/geometry/shape/: mod.rs  plymesh.rs  sphere.rs  transform.rs  triangle.rs
src/integrator/: direct_light.rs  mod.rs  path.rs
src/light/: area.rs  distant.rs  infinite_area.rs  mod.rs  point.rs
src/material/: glass.rs  matte.rs  mirror.rs  mix.rs  mod.rs  plastic.rs  translucent.rs  uber.rs
src/material/bxdf/: lambertian.rs  lambertian_reflection.rs  microfacet.rs  mod.rs  oren_nayar.rs  specular.rs
src/math/: distribution.rs  mod.rs  with_pdf.rs
src/sampler/: halton.rs  halton_sampler.rs  mod.rs
src/scene/: clipper.rs  texture_map.rs
src/scene_file_parser/: lex.rs  mod.rs
src/spectrum/: mod.rs  rgb_spectrum.rs
src/texture/: constant.rs  image.rs  mod.rs
src/texture/image/: exr.rs  png.rs
src/utility/: any_map.rs  fixed_vec_2d.rs  mod.rs
