[package]
name = "curry-pbrt"
version = "0.1.0"
authors = ["CurryPseudo <currypseudo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.20.0"
alga = "0.9.3"
num-traits = "0.2.11"
derive_more = "0.99.5"
clap = "2.33.0"
png = "0.11.0"
