[package]
name = "curry-pbrt"
version = "0.1.0"
authors = ["CurryPseudo <currypseudo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.20.0"
alga = "0.9.3"
num-traits = "0.2.11"
derive_more = "0.99.5"
png = "0.11.0"
log = "0.4.8"
pretty_env_logger = "0.4.0"
downcast-rs = "1.1.1"
rayon = "1.3.0"
indicatif = "0.14.0"
rand = "0.7.3"
lazy_static = "1.4.0"
cpuprofiler = "0.0.4"
